--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,9 @@ rvm:
   - 2.3
   - 2.4
   - 2.5
+  - ruby-head
+matrix:
+  allow_failures:
+    - rvm: ruby-head
+  fast_finish: true
 before_install: gem update --system
